--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Primis eget</a></h2>
+										<h2><a href="https://github.com/Srimurari14/Projects/tree/main/Movie%20Recommendation%20System">Primis eget</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="https://github.com/Srimurari14/Projects/tree/main/Movie%20Recommendation%20System" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum </p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Srimurari14/Projects/tree/main/Movie%20Recommendation%20System" class="button">Full Story</a></li>
 									</ul>
 								</article>
 
